# YoutubeAutomator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: games.yaml  settings.yaml
data/corpus/: video_index.tsv  video_urls.txt
scripts/: derisk_inject_media.py  inspect_prproj.py  probe_clipitems.py  probe_media_boundary.py  probe_media_cluster.py  probe_nest_interior.py  prproj_xml_probe.py  summarize_describe.py  sync_chats.py  verify_media_paths.py  verify_prproj_map.py
scripts/cep/YTA/: .debug  index.html
scripts/jsx/: describe_project.jsx  spike_encoder.jsx  spike_probe.jsx  spike_qe.jsx  yta_encoder.jsx  yta_thumbnail.jsx
src/youtube_automator/: __init__.py  cli.py  config.py  paths.py
src/youtube_automator/adobe/: __init__.py  audio_mux.py  auto_render.py  edit_plan.py  photoshop.py  premiere.py  prproj_rebuild.py  prproj_xml.py
src/youtube_automator/gui/: __init__.py  app.py
src/youtube_automator/ideation/: recent_uploads.py  topic_generator.py
src/youtube_automator/llm/: claude.py
src/youtube_automator/metadata/: generator.py
src/youtube_automator/research/: aggregator.py  types.py
src/youtube_automator/script/: generator.py  guardrails.py  style_corpus.py
src/youtube_automator/social/: __init__.py  post.py  queue.py
src/youtube_automator/transcribe/: whisper_runner.py
src/youtube_automator/upload/: schedule.py  youtube.py
tests/: test_auto_render.py  test_config.py  test_edit_plan.py  test_photoshop.py  test_premiere_layout.py  test_prproj_xml.py  test_schedule.py  test_social.py  test_topic_steer.py
(+6 files in other folders)
